--- a/src/app/pages/options/option.less
+++ b/src/app/pages/options/option.less
@@ -5,6 +5,7 @@
 .form-btns {
   text-align: center;
 }
+
 .group-form {
   .group-label {
     font-weight: bold;
@@ -16,6 +17,7 @@
       margin: 0 8px 0 2px;
     }
   }
+
   .group-label, .check-item {
     line-height: 32px;
   }
@@ -31,6 +33,15 @@
   [nz-row]:not(:last-child) {
     margin-bottom: 24px;
   }
+}
+
+.input-number {
+  width: 100px;
+}
+
+.input-desc {
+  margin-left: 8px;
+  color: rgba(0, 0, 0, .45);
 }
 
 nz-form-label {
