--- a/src/app/pages/posts/post-form/post-form.component.html
+++ b/src/app/pages/posts/post-form/post-form.component.html
@@ -67,7 +67,8 @@
         <div class="form-label"><label>摘要</label></div>
         <nz-form-control [nzErrorTip]="excerptErrorTpl">
           <nz-textarea-count [nzMaxCharacterCount]="maxExcerptLength">
-            <textarea nz-input rows="4" formControlName="excerpt" [maxlength]="maxExcerptLength" placeholder="请输入内容摘要"></textarea>
+            <textarea nz-input rows="4" formControlName="excerpt" [maxlength]="maxExcerptLength"
+                      placeholder="请输入内容摘要"></textarea>
           </nz-textarea-count>
           <ng-template #excerptErrorTpl let-control>
             <ng-container *ngIf="control.hasError('required')">请输入内容摘要</ng-container>
@@ -131,13 +132,18 @@
           [nzErrorTip]="passwordErrorTpl"
         >
           <nz-input-group [nzSuffix]="passwordSuffix">
-            <input nz-input [type]="passwordVisible ? 'text' : 'password'" formControlName="password" placeholder="请输入密码"/>
+            <input nz-input [type]="passwordVisible ? 'text' : 'password'" [maxlength]="maxPostPasswordLength"
+                   formControlName="password" placeholder="请输入密码"/>
           </nz-input-group>
           <ng-template #passwordSuffix>
-            <i nz-icon [nzType]="passwordVisible ? 'eye-invisible' : 'eye'" (click)="passwordVisible = !passwordVisible"></i>
+            <i nz-icon [nzType]="passwordVisible ? 'eye-invisible' : 'eye'"
+               (click)="passwordVisible = !passwordVisible"></i>
           </ng-template>
           <ng-template #passwordErrorTpl>
             <ng-container *ngIf="postForm.errors?.['password'].required">请输入密码</ng-container>
+            <ng-container *ngIf="postForm.errors?.['password'].maxlength">
+              密码最大长度为{{maxPostPasswordLength}}字符
+            </ng-container>
           </ng-template>
         </nz-form-control>
       </nz-form-item>
@@ -170,7 +176,8 @@
             <input nz-input type="text" formControlName="source" [maxlength]="maxPostSourceLength" placeholder="请输入来源"/>
             <ng-template #sourceErrorTpl>
               <ng-container *ngIf="postForm.errors?.['source'].required">请输入来源</ng-container>
-              <ng-container *ngIf="postForm.errors?.['source'].maxlength">来源最大长度为{{maxPostSourceLength}}字符</ng-container>
+              <ng-container *ngIf="postForm.errors?.['source'].maxlength">来源最大长度为{{maxPostSourceLength}}字符
+              </ng-container>
             </ng-template>
           </nz-form-control>
         </nz-form-item>
@@ -183,7 +190,8 @@
             <input nz-input type="text" formControlName="author" [maxlength]="maxPostAuthorLength" placeholder="请输入作者"/>
             <ng-template #authorErrorTpl>
               <ng-container *ngIf="postForm.errors?.['author'].required">请输入作者</ng-container>
-              <ng-container *ngIf="postForm.errors?.['author'].maxlength">作者最大长度为{{maxPostAuthorLength}}字符</ng-container>
+              <ng-container *ngIf="postForm.errors?.['author'].maxlength">作者最大长度为{{maxPostAuthorLength}}字符
+              </ng-container>
             </ng-template>
           </nz-form-control>
         </nz-form-item>
