--- a/src/app/pages/posts/post-list/post-list.component.html
+++ b/src/app/pages/posts/post-list/post-list.component.html
@@ -354,17 +354,18 @@
               [nzErrorTip]="passwordErrorTpl"
             >
               <nz-input-group [nzSuffix]="passwordSuffix">
-                <input nz-input
-                       [type]="passwordVisible ? 'text' : 'password'" formControlName="password"
-                       placeholder="请输入密码"/>
+                <input nz-input [type]="passwordVisible ? 'text' : 'password'" [maxlength]="maxPostPasswordLength"
+                       formControlName="password" placeholder="请输入密码"/>
               </nz-input-group>
               <ng-template #passwordSuffix>
-                <i nz-icon
-                   [nzType]="passwordVisible ? 'eye-invisible' : 'eye'"
+                <i nz-icon [nzType]="passwordVisible ? 'eye-invisible' : 'eye'"
                    (click)="passwordVisible = !passwordVisible"></i>
               </ng-template>
               <ng-template #passwordErrorTpl>
                 <ng-container *ngIf="postForm.errors?.['password'].required">请输入密码</ng-container>
+                <ng-container *ngIf="postForm.errors?.['password'].maxlength">
+                  密码最大长度为{{maxPostPasswordLength}}字符
+                </ng-container>
               </ng-template>
             </nz-form-control>
           </nz-form-item>
@@ -399,8 +400,7 @@
           </nz-form-item>
         </div>
       </div>
-      <div nz-row [nzGutter]="postFormRowGutter"
-           *ngIf="postForm.get('original')?.value === 0">
+      <div nz-row [nzGutter]="postFormRowGutter" *ngIf="postForm.get('original')?.value === 0">
         <div nz-col [nzSpan]="12">
           <nz-form-item>
             <nz-form-label nzRequired>来源</nz-form-label>
